# Document-detector

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
Document_detector/: CMakeLists.txt
Document_detector/src/: App.cpp  App.h  App.ui  CvImage.cpp  CvImage.h  Document_detector.cpp
custom_triplets/: x64-windows-rel.cmake
